apps/web/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
  namespace: remembot
spec:
  selector:
    app: web
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  type: ClusterIP
