apps/web/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: remembot
spec:
  rules:
    - host: "remem.bot"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
  tls:
    - hosts:
        - remem.bot
      secretName: web-cert
